# testgrep

./: .envrc  Cargo.toml
src/: main.rs
