[package]
name = "testgrep"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-lazy = { version = "0.1.0", features = ["parking_lot", "nightly"] }
ctor = "0.2.4"
tokio = { version = "1.29.1", features = ["macros", "rt", "rt-multi-thread"] }
tokio-postgres = "0.7.8"
tracing = "0.1.37"
